--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-themes": "^0.3.0",
     "react": "19.0.0-rc-6d3110b4d9-20240531",
     "react-dom": "19.0.0-rc-6d3110b4d9-20240531",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
